--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <div class="score-board">
       <div id="user-label" class="badge">Vos</div>
       <div id="computer-label" class="badge">Yo</div>
-      <span class="user-score">0</span>:<span class="computer-score">0</span>
+      <span id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
     <!-- Resultado -->
     <div class="result">
-      <p>Papel sobre piedra. Vos ganás</p>
+      <p>Comenzar el juego</p>
     </div>
     <!-- Selección -->
     <div class="choices">
-      <div class="choice">
-        <img src="img/piedra.png" id="rock" alt="Selección Piedra" />
+      <div class="choice" id="stone">
+        <img src="img/piedra.png" alt="Selección Piedra" />
       </div>
-      <div class="choice">
-        <img src="img/papel.png" id="paper" alt="Selección Papel" />
+      <div class="choice" id="paper">
+        <img src="img/papel.png" alt="Selección Papel" />
       </div>
-      <div class="choice">
-        <img src="img/tijera.png" id="scissor" alt="Selección Tijera" />
+      <div class="choice" id="scissor">
+        <img src="img/tijera.png" alt="Selección Tijera" />
       </div>
     </div>
     <!-- Mensaje -->
