add reset button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     </div>
     <!-- Mensaje -->
     <p class="action-message">Esperando tu selección</p>
+    <!-- Reset -->
+    <div class="reset-container">
+      <button id="reset-btn" class="reset-btn">reset</button>
+    </div>
     <script src="/js/script.js"></script>
   </body>
 </html>
